[package]
name = "hourglass-rs"
version = "0.1.1"
edition = "2021"
authors = ["taky <taky@taky.com>"]
description = "A time abstraction crate for testing time-dependent code"
license = "MIT"
repository = "https://github.com/oeo/hourglass-rs"
keywords = ["time", "testing", "mock", "chrono", "async"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["time", "rt", "macros", "sync"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
